# QMapfileEditor

./: .gitignore  .travis.yml  CMakeLists.txt  COMMITERS  COMMITTERS  QMapfileEditor.pro  README.md  classstylesetting.cpp  classstylesetting.h  classstylesetting.ui  fontSettings.ui  fontsettings.cpp  fontsettings.h  fontsettings.ui  keyvaluemodel.cpp  keyvaluemodel.h  layerclasssettings.cpp  layerclasssettings.h  layerclasssettings.ui  layersSetings.ui  layersettings.cpp  layersettings.h  layersettings.ui  layersettingsraster.cpp  layersettingsraster.h  layersettingsraster.ui  layersettingsvector.cpp  layersettingsvector.h  layersettingsvector.ui  libmapserver-bridge.c  libmapserver-bridge.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapSetting.ui  mapfileparser.cpp  mapfileparser.h  mapscene.cpp  mapscene.h  (+8 more)
commands/: changemapnamecommand.cpp  changemapnamecommand.h  changemapstatuscommand.cpp  changemapstatuscommand.h  layercommands.cpp  layercommands.h  outputformatcommands.cpp  outputformatcommands.h  setanglecommand.cpp  setanglecommand.h  setconfigoptioncommand.cpp  setconfigoptioncommand.h  setdatapatterncommand.cpp  setdatapatterncommand.h  setdefresolutioncommand.cpp  setdefresolutioncommand.h  setfontsetcommand.cpp  setfontsetcommand.h  setimagecolorcommand.cpp  setimagecolorcommand.h  setmapdebugcommand.cpp  setmapdebugcommand.h  setmapextentcommand.cpp  setmapextentcommand.h  setmapmaxsizecommand.cpp  setmapmaxsizecommand.h  setmapprojectioncommand.cpp  setmapprojectioncommand.h  setmapsizecommand.cpp  setmapsizecommand.h  setmapunitscommand.cpp  setmapunitscommand.h  setmetadatacommand.cpp  setmetadatacommand.h  setresolutioncommand.cpp  setresolutioncommand.h  setshapepathcommand.cpp  setshapepathcommand.h  setsymbolsetcommand.cpp  setsymbolsetcommand.h  (+2 more)
data/: postgis.map  raster_vector_stack.qgs  sample_qgis.qgs  symbol.sym  test.font  test.map  vector_categorized.qgs  vector_continue.qgs  vector_label_europe.qgs  vector_postgis.qgs  vector_unique.qgs  webservice.qgs  world_mapfile.map  world_raster.tfw  world_raster.tif
lang/: en.ts  en_US.qm  fr.ts  fr_FR.qm  fr_FR.ts
parser/: layer.cpp  layer.h  mapfileparser.cpp  mapfileparser.h  outputformat.cpp  outputformat.h
qgisimporter/: main.cpp  qgisimporter.cpp  qgisimporter.h  qgisimporter.pro
test/: README.md  autotest.h  testQMapfileEditor.pro  testcommands.cpp  testcommands.h  testlayer.cpp  testlayer.h  testmapfileparser.cpp  testmapfileparser.h  testoutputformat.cpp  testoutputformat.h
