SET(PROJECT_NAME "QMapfileEditor")
PROJECT(${PROJECT_NAME})

cmake_minimum_required(VERSION 3.0)


SET(QT_MIN_VERSION 4.7.0)
FIND_PACKAGE(Qt4 ${QT_MIN_VERSION} REQUIRED)

SET(QMAPFILEEDITOR_SOURCES main.cpp mainwindow.cpp mapsettings.cpp mapfileparser.cpp)
SET(QMAPFILEEDITOR_HEADERS mainwindow.h mapsettings.h mapfileparser.h)
SET(QMAPFILEEDITOR_FORMS mainwindow.ui mapsettings.ui)
SET(QMAPFILEEDITOR_RESOURCES resources.qrc)


QT4_WRAP_CPP(QMAPFILEEDITOR_HEADERS_MOC ${QMAPFILEEDITOR_HEADERS})
QT4_WRAP_UI(QMAPFILEEDITOR_FORMS_HEADERS ${QMAPFILEEDITOR_FORMS})
QT4_ADD_RESOURCES(QMAPFILEEDITOR_RESOURCES_RCC ${QMAPFILEEDITOR_RESOURCES})


INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})


ADD_EXECUTABLE(${PROJECT_NAME} ${QMAPFILEEDITOR_SOURCES}
  ${QMAPFILEEDITOR_HEADERS_MOC}
  ${QMAPFILEEDITOR_FORMS_HEADERS}
  ${QMAPFILEEDITOR_RESOURCES_RCC})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${QT_LIBRARIES})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

#required to bind on top of libmapserver
FIND_PACKAGE(GDAL)

FIND_PACKAGE(MAPSERVER)


