SET(PROJECT_NAME "QMapfileEditor")
PROJECT(${PROJECT_NAME})

SET(MAPSERVER_HEADERS_PATH "/usr/include/mapserver")
SET(MAPSERVER_LIBRARY "mapserver")


cmake_minimum_required(VERSION 2.8)


SET(QT_MIN_VERSION 4.7.0)
FIND_PACKAGE(Qt4 ${QT_MIN_VERSION} REQUIRED)

SET(QMAPFILEEDITOR_SOURCES main.cpp mainwindow.cpp mapsettings.cpp mapfileparser.cpp outputformat.cpp
    commands/changemapnamecommand.cpp)
SET(QMAPFILEEDITOR_HEADERS mainwindow.h mapsettings.h mapfileparser.h outputformat.h
    commands/changemapnamecommand.h)
SET(QMAPFILEEDITOR_FORMS mainwindow.ui mapsettings.ui)
SET(QMAPFILEEDITOR_RESOURCES resources.qrc)


QT4_WRAP_CPP(QMAPFILEEDITOR_HEADERS_MOC ${QMAPFILEEDITOR_HEADERS})
QT4_WRAP_UI(QMAPFILEEDITOR_FORMS_HEADERS ${QMAPFILEEDITOR_FORMS})
QT4_ADD_RESOURCES(QMAPFILEEDITOR_RESOURCES_RCC ${QMAPFILEEDITOR_RESOURCES})


INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})


ADD_EXECUTABLE(${PROJECT_NAME} ${QMAPFILEEDITOR_SOURCES}
  ${QMAPFILEEDITOR_HEADERS_MOC}
  ${QMAPFILEEDITOR_FORMS_HEADERS}
  ${QMAPFILEEDITOR_RESOURCES_RCC})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${QT_LIBRARIES})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

#required to bind on top of libmapserver
FIND_PACKAGE(GDAL 1.6 REQUIRED)

#FIND_PACKAGE(MAPSERVER 6.2 REQUIRED)

if (NOT ${GDAL_FOUND})
  message(SEND_ERROR "GDAL headers / lib could not be found.")
else(NOT ${GDAL_FOUND})
  INCLUDE_DIRECTORIES(${GDAL_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GDAL_LIBRARIES})
endif(NOT ${GDAL_FOUND})

INCLUDE_DIRECTORIES(${MAPSERVER_HEADERS_PATH})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${MAPSERVER_LIBRARY})
